--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
-            <a href="#" class="btn">Hire Us!</a>
+            <a href="https://www.facebook.com/profile.php?id=61566829535881" target="_blank" class="btn">Hire Us!</a>
             <br>
             <br>
 
