--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
-            <a href="https://www.facebook.com/profile.php?id=61566829535881" target="_blank" class="btn">Hire Us!</a>
+            <a href="https://www.facebook.com/profile.php?id=61566829535881" target="_blank" class="btn">Message Us!</a>
             <br>
             <br>
             <p div class="Copyright">&#169 Copyright. All rights are reserved</p>
