--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="./picture/main.jpg">
-    <title>THE BL9NK</title>
+    <title>HACKED!</title>
 </head>
 <body>
     <header>
